force-app/main/default/objects/FTMSSO__c/fields/ContSeal__c.field-meta.xml
<CustomField>
    <fullName>ContSeal__c</fullName>
    <label>Cont/Seal</label>
    <type>TextArea</type>
</CustomField>