force-app/main/default/objects/FTMSSO__c/fields/Createattachmenttasktest__c.field-meta.xml
<CustomField>
    <fullName>Createattachmenttasktest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create attachment task test</label>
    <type>Checkbox</type>
</CustomField>