force-app/main/default/objects/FTMSSO__c/fields/CreateConsolBill__c.field-meta.xml
<CustomField>
    <fullName>CreateConsolBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Consol Bill</label>
    <type>Checkbox</type>
</CustomField>