force-app/main/default/objects/FTMSSO__c/fields/CreateCustomClearance__c.field-meta.xml
<CustomField>
    <fullName>CreateCustomClearance__c</fullName>
    <formula>IF(ISBLANK(ShippingInformation__c) = TRUE, ConsolidationID__r.ShippingInformation__r.CreateCustomClearance__c , ShippingInformation__r.CreateCustomClearance__c)</formula>
    <label>Create Custom Clearance?</label>
    <type>Checkbox</type>
</CustomField>