force-app/main/default/objects/FTMSSO__c/fields/CreatedfromCombinedSI__c.field-meta.xml
<CustomField>
    <fullName>CreatedfromCombinedSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Trigger &quot;F/TMS S/O | Trigger Flow to Create Consol Bills after Combining SI&quot; flow</description>
    <label>Created from Combined SI</label>
    <type>Checkbox</type>
</CustomField>