force-app/main/default/objects/FTMSSO__c/fields/CreateTrucking__c.field-meta.xml
<CustomField>
    <fullName>CreateTrucking__c</fullName>
    <formula>IF(ISBLANK(ShippingInformation__c) = TRUE, ConsolidationID__r.ShippingInformation__r.CreateTrucking__c , ShippingInformation__r.CreateTrucking__c)</formula>
    <label>Create Trucking?</label>
    <type>Checkbox</type>
</CustomField>