force-app/main/default/objects/FTMSSO__c/fields/CreditNoteIssueDeadline__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteIssueDeadline__c</fullName>
    <label>Credit Note Issue Deadline</label>
    <type>Date</type>
</CustomField>