force-app/main/default/objects/FTMSSO__c/fields/CrossBorderType__c.field-meta.xml
<CustomField>
    <fullName>CrossBorderType__c</fullName>
    <label>Cross Border Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CrossBorderType</valueSetName>
    </valueSet>
</CustomField>