force-app/main/default/objects/FTMSSO__c/fields/Customer_FullName__c.field-meta.xml
<CustomField>
    <fullName>Customer_FullName__c</fullName>
    <formula>Hyperlink(&quot;/&quot;&amp; Customer__r.Id, Customer__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer FullName</label>
    <type>Text</type>
</CustomField>