force-app/main/default/objects/FTMSSO__c/fields/CustomerDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetailInformation__c</fullName>
    <label>Customer’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>