force-app/main/default/objects/FTMSSO__c/fields/CustomerDetailInformation_text__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetailInformation_text__c</fullName>
    <label>Customer&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>