force-app/main/default/objects/FTMSSO__c/fields/CustomersInvoiceno__c.field-meta.xml
<CustomField>
    <fullName>CustomersInvoiceno__c</fullName>
    <label>Customer’s Invoice no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>