force-app/main/default/objects/FTMSSO__c/fields/CustomsDuty__c.field-meta.xml
<CustomField>
    <fullName>CustomsDuty__c</fullName>
    <label>Customs Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>