force-app/main/default/objects/FTMSSO__c/fields/Cut_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Time__c</fullName>
    <label>Cut Off Time</label>
    <type>DateTime</type>
</CustomField>