force-app/main/default/objects/FTMSSO__c/fields/CutoffSI__c.field-meta.xml
<CustomField>
    <fullName>CutoffSI__c</fullName>
    <label>SI Cut-off</label>
    <type>Date</type>
</CustomField>