force-app/main/default/objects/FTMSSO__c/fields/CWDimension__c.field-meta.xml
<CustomField>
    <fullName>CWDimension__c</fullName>
    <label>C.W(Dimension)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>