force-app/main/default/objects/FTMSSO__c/fields/Date_Issued_HBL__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued_HBL__c</fullName>
    <formula>LPAD(TEXT(DAY( DateofHouseBLIssued__c )),2,&apos;0&apos;) +&apos;-&apos;+ CASE( MONTH( DateofHouseBLIssued__c ) , 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, &quot;DEC&quot;) +&apos;-&apos;+ TEXT(YEAR( DateofHouseBLIssued__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Issued (HBL)</label>
    <type>Text</type>
</CustomField>