force-app/main/default/objects/FTMSSO__c/fields/Date_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_issue__c</fullName>
    <label>Date of issue</label>
    <type>Date</type>
</CustomField>