force-app/main/default/objects/FTMSSO__c/fields/DateInvoiceSenttoCustomer__c.field-meta.xml
<CustomField>
    <fullName>DateInvoiceSenttoCustomer__c</fullName>
    <label>Date Invoice Sent to Customer</label>
    <type>Date</type>
</CustomField>