force-app/main/default/objects/FTMSSO__c/fields/DateofHouseBLIssued__c.field-meta.xml
<CustomField>
    <fullName>DateofHouseBLIssued__c</fullName>
    <label>Date of House B/L Issued</label>
    <type>Date</type>
</CustomField>