force-app/main/default/objects/FTMSSO__c/fields/DateofMasterBLIssued__c.field-meta.xml
<CustomField>
    <fullName>DateofMasterBLIssued__c</fullName>
    <label>Date of Master B/L Issued</label>
    <type>Date</type>
</CustomField>