force-app/main/default/objects/FTMSSO__c/fields/DateonAgentdebitcreditnote__c.field-meta.xml
<CustomField>
    <fullName>DateonAgentdebitcreditnote__c</fullName>
    <label>Date on Agent debit/ credit note</label>
    <type>Date</type>
</CustomField>