force-app/main/default/objects/FTMSSO__c/fields/DeliveryAgentInfoonBL__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAgentInfoonBL__c</fullName>
    <label>Delivery Agent Info on BL</label>
    <type>TextArea</type>
</CustomField>