force-app/main/default/objects/FTMSSO__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>EXPECTED DELIVERY DATE</label>
    <type>Date</type>
</CustomField>