force-app/main/default/objects/FTMSSO__c/fields/DeliveryOrderCheck__c.field-meta.xml
<CustomField>
    <fullName>DeliveryOrderCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO</label>
    <type>Checkbox</type>
</CustomField>