force-app/main/default/objects/FTMSSO__c/fields/DeliveryPartysDetails_text__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPartysDetails_text__c</fullName>
    <label>Delivery Party&apos;s Details</label>
    <type>TextArea</type>
</CustomField>