force-app/main/default/objects/FTMSSO__c/fields/DimensionDetail__c.field-meta.xml
<CustomField>
    <fullName>DimensionDetail__c</fullName>
    <label>Dimension Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>