force-app/main/default/objects/FTMSSO__c/fields/DNCNRemarks__c.field-meta.xml
<CustomField>
    <fullName>DNCNRemarks__c</fullName>
    <label>D/N &amp; C/N Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>