force-app/main/default/objects/FTMSSO__c/fields/DOCheck__c.field-meta.xml
<CustomField>
    <fullName>DOCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Order</label>
    <type>Checkbox</type>
</CustomField>