force-app/main/default/objects/FTMSSO__c/fields/Dropoffat__c.field-meta.xml
<CustomField>
    <fullName>Dropoffat__c</fullName>
    <label>Drop-off at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>