force-app/main/default/objects/FTMSSO__c/fields/EbookingID__c.field-meta.xml
<CustomField>
    <fullName>EbookingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking ID</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipName>F_TMS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>