force-app/main/default/objects/FTMSSO__c/fields/ETAAtTransitPort__c.field-meta.xml
<CustomField>
    <fullName>ETAAtTransitPort__c</fullName>
    <label>ETA At Transit Port</label>
    <type>Date</type>
</CustomField>