force-app/main/default/objects/FTMSSO__c/fields/ETD2nd__c.field-meta.xml
<CustomField>
    <fullName>ETD2nd__c</fullName>
    <label>ETD (2nd)</label>
    <type>Date</type>
</CustomField>