force-app/main/default/objects/FTMSSO__c/fields/ETD3rd__c.field-meta.xml
<CustomField>
    <fullName>ETD3rd__c</fullName>
    <label>ETD (3rd)</label>
    <type>Date</type>
</CustomField>