force-app/main/default/objects/FTMSSO__c/fields/ETDAtTransitPort__c.field-meta.xml
<CustomField>
    <fullName>ETDAtTransitPort__c</fullName>
    <label>ETD At Transit Port</label>
    <type>Date</type>
</CustomField>