force-app/main/default/objects/FTMSSO__c/fields/FCL_LCL_Mark__c.field-meta.xml
<CustomField>
    <fullName>FCL_LCL_Mark__c</fullName>
    <formula>IF(TEXT(Shipment_Type__c)=&quot;FCL&quot;, &quot;SHIPPER&apos;S LOAD, STOW, COUNT &amp; SEAL&quot;,&quot;PARTICULARS DECLARED BY SHIPPER BUT NOT ACKNOWLEDGED BY CARRIER&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCL/LCL Mark</label>
    <type>Text</type>
</CustomField>