force-app/main/default/objects/FTMSSO__c/fields/File_No1__c.field-meta.xml
<CustomField>
    <fullName>File_No1__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id ,  JobRequestID__c  , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File No</label>
    <type>Text</type>
</CustomField>