force-app/main/default/objects/FTMSSO__c/fields/FinalDestinationDetail__c.field-meta.xml
<CustomField>
    <fullName>FinalDestinationDetail__c</fullName>
    <label>Final Destination Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>