force-app/main/default/objects/FTMSSO__c/fields/FinalDestinationsDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>FinalDestinationsDetailInformation__c</fullName>
    <label>Final Destination&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>