force-app/main/default/objects/FTMSSO__c/fields/FirstApprovalTime__c.field-meta.xml
<CustomField>
    <fullName>FirstApprovalTime__c</fullName>
    <label>First Approval Time</label>
    <type>DateTime</type>
</CustomField>