force-app/main/default/objects/FTMSSO__c/fields/FlightDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>FlightDetailInformation__c</fullName>
    <formula>POLAOD__r.Standard_Port_Code__c &amp;&quot; - &quot;&amp; PODAOA__r.Standard_Port_Code__c &amp;&quot; / &quot;&amp; VesselFlight__c &amp;&quot; / &quot;&amp; text(ETD__c)
&amp;BR()&amp; 
PODAOA__r.Standard_Port_Code__c &amp;&quot; - &quot;&amp; PODAOA2nd__r.Standard_Port_Code__c &amp;&quot; / &quot;&amp; VesselFlight2nd__c &amp;&quot; / &quot;&amp;  text(ETD2nd__c)  
&amp;BR()&amp; 
PODAOA2nd__r.Standard_Port_Code__c &amp;&quot; - &quot;&amp; PODAOA3rd__r.Standard_Port_Code__c &amp;&quot; / &quot;&amp; VesselFlight3rd__c &amp;&quot; / &quot;&amp;  text(ETD3rd__c)</formula>
    <label>Flight Detail Information</label>
    <type>Text</type>
</CustomField>