force-app/main/default/objects/FTMSSO__c/fields/FlightNumber__c.field-meta.xml
<CustomField>
    <fullName>FlightNumber__c</fullName>
    <label>Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>