force-app/main/default/objects/FTMSSO__c/fields/FMCClearance__c.field-meta.xml
<CustomField>
    <fullName>FMCClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMC Clearance</label>
    <type>Checkbox</type>
</CustomField>