force-app/main/default/objects/FTMSSO__c/fields/ForDeliveryofGoodsapplyto__c.field-meta.xml
<CustomField>
    <fullName>ForDeliveryofGoodsapplyto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>For Delivery of Goods apply to</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O6</relationshipName>
    <type>Lookup</type>
</CustomField>