force-app/main/default/objects/FTMSSO__c/fields/ForwardingServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>ForwardingServiceProvider__c</fullName>
    <label>Forwarding Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>By Us</fullName>
            </value>
            <value>
                <fullName>By Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>