force-app/main/default/objects/FTMSSO__c/fields/FUMIGATION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>FUMIGATION_STATUS__c</fullName>
    <label>FUMIGATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fumigation Confirmed</fullName>
            </value>
            <value>
                <fullName>No fumigation required : Made of plastic</fullName>
            </value>
            <value>
                <fullName>Untreated</fullName>
            </value>
            <value>
                <fullName>Discarded upon delivery</fullName>
            </value>
            <value>
                <fullName>Not clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>