force-app/main/default/objects/FTMSSO__c/fields/GoodsAttachment__c.field-meta.xml
<CustomField>
    <fullName>GoodsAttachment__c</fullName>
    <label>Goods Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>