force-app/main/default/objects/FTMSSO__c/fields/GoodsDescriptiononAN__c.field-meta.xml
<CustomField>
    <fullName>GoodsDescriptiononAN__c</fullName>
    <label>Goods Description on AN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>