force-app/main/default/objects/FTMSSO__c/fields/GreenwichMeanTimeGap__c.field-meta.xml
<CustomField>
    <fullName>GreenwichMeanTimeGap__c</fullName>
    <label>Greenwich Mean Time Gap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>