force-app/main/default/objects/FTMSSO__c/fields/GrossWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightUnit__c</fullName>
    <label>Gross Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KGM</fullName>
            </value>
            <value>
                <fullName>TNE</fullName>
            </value>
            <value>
                <fullName>LBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>