force-app/main/default/objects/FTMSSO__c/fields/GW_HBL__c.field-meta.xml
<CustomField>
    <fullName>GW_HBL__c</fullName>
    <label>GW (HBL)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>