force-app/main/default/objects/FTMSSO__c/fields/HAWBNumber__c.field-meta.xml
<CustomField>
    <fullName>HAWBNumber__c</fullName>
    <label>H AWB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>