force-app/main/default/objects/FTMSSO__c/fields/HBLHAWB__c.field-meta.xml
<CustomField>
    <fullName>HBLHAWB__c</fullName>
    <label>HBL/HAWB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>