force-app/main/default/objects/FTMSSO__c/fields/HBLHAWBCheck__c.field-meta.xml
<CustomField>
    <fullName>HBLHAWBCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HBL/HAWB</label>
    <type>Checkbox</type>
</CustomField>