force-app/main/default/objects/FTMSSO__c/fields/HBLHAWBLink__c.field-meta.xml
<CustomField>
    <fullName>HBLHAWBLink__c</fullName>
    <label>H B/L &amp; HAWB Link</label>
    <type>Url</type>
</CustomField>