force-app/main/default/objects/FTMSSO__c/fields/HBLIssueStatus__c.field-meta.xml
<CustomField>
    <fullName>HBLIssueStatus__c</fullName>
    <label>H B/L Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original H B/L Issued</fullName>
            </value>
            <value>
                <fullName>Waybill Issued</fullName>
            </value>
            <value>
                <fullName>H B/L Surrendered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>