force-app/main/default/objects/FTMSSO__c/fields/HBLNumber__c.field-meta.xml
<CustomField>
    <fullName>HBLNumber__c</fullName>
    <label>H B/L Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>