force-app/main/default/objects/FTMSSO__c/fields/HBLType__c.field-meta.xml
<CustomField>
    <fullName>HBLType__c</fullName>
    <label>House bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
            <value>
                <fullName>SURRENDERED</fullName>
            </value>
            <value>
                <fullName>TELEX</fullName>
                <isActive>false</isActive>
                <label>TELEX</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>