force-app/main/default/objects/FTMSSO__c/fields/House_Bill__c.field-meta.xml
<CustomField>
    <fullName>House_Bill__c</fullName>
    <formula>IF(OR(RecordType.DeveloperName = &apos;AirImport&apos;, RecordType.DeveloperName = &apos;AirExport&apos;) ,  HAWBNumber__c , IF(OR(RecordType.DeveloperName = &apos;OceanImport&apos;, RecordType.DeveloperName = &apos;OceanExport&apos;) ,   HBLNumber__c , &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Bill</label>
    <type>Text</type>
</CustomField>