force-app/main/default/objects/FTMSSO__c/fields/HouseNotifyDetailInformation1__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyDetailInformation1__c</fullName>
    <formula>IF(NOT(ISBLANK( HouseNotifyParty__r.AccountNameENG__c )), HouseNotifyParty__r.AccountNameENG__c , NULL) + &quot; &quot; + BR()&amp;
IF(NOT(ISBLANK(HouseNotifyParty__r.BillingStreet)), HouseNotifyParty__r.BillingStreet , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(HouseNotifyParty__r.BillingCity)), HouseNotifyParty__r.BillingCity , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(HouseNotifyParty__r.BillingState)), HouseNotifyParty__r.BillingState, NULL) + &quot; &quot; +
IF(NOT(ISBLANK(HouseNotifyParty__r.BillingPostalCode)), &quot;, &quot; + HouseNotifyParty__r.BillingPostalCode , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(HouseNotifyParty__r.BillingCountry)), HouseNotifyParty__r.BillingCountry, NULL) + &quot; &quot; + BR()&amp;
IF(NOT(ISBLANK(HouseNotifyParty__r.Phone)), &quot; &quot; + &quot;TEL:&quot; +&quot; &quot;+ HouseNotifyParty__r.Phone, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Notify&apos;s Detail Information</label>
    <type>Text</type>
</CustomField>