force-app/main/default/objects/FTMSSO__c/fields/HouseNotifyDetailInformation_text__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyDetailInformation_text__c</fullName>
    <label>House Notify&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>