force-app/main/default/objects/FTMSSO__c/fields/HouseNotifyParty__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O3</relationshipName>
    <type>Lookup</type>
</CustomField>