force-app/main/default/objects/FTMSSO__c/fields/HouseNotifyPartyDetail_Information__c.field-meta.xml
<CustomField>
    <fullName>HouseNotifyPartyDetail_Information__c</fullName>
    <label>House Notify Party’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>