force-app/main/default/objects/FTMSSO__c/fields/HSCode__c.field-meta.xml
<CustomField>
    <fullName>HSCode__c</fullName>
    <label>HS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>