force-app/main/default/objects/FTMSSO__c/fields/InvoiceIssueDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceIssueDate__c</fullName>
    <label>Invoice Issue Date</label>
    <type>Date</type>
</CustomField>