force-app/main/default/objects/FTMSSO__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number on Air Manifest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>