force-app/main/default/objects/FTMSSO__c/fields/IsSingledelete__c.field-meta.xml
<CustomField>
    <fullName>IsSingledelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSingledelete</label>
    <type>Checkbox</type>
</CustomField>