force-app/main/default/objects/FTMSSO__c/fields/JobRequestID__c.field-meta.xml
<CustomField>
    <fullName>JobRequestID__c</fullName>
    <label>File No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>