force-app/main/default/objects/FTMSSO__c/fields/Lock_SO__c.field-meta.xml
<CustomField>
    <fullName>Lock_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock SO</label>
    <type>Checkbox</type>
</CustomField>